@@ -23,5 +23,5 @@ EXTRA_DIST=gimp-window.jpg  PNGPrintMiniHowto.txt
 
 MOSTLYCLEANFILES = *~
 CLEANFILES = *~
-DISTCLEANFILES = *~ Makefile Makefile.in
+DISTCLEANFILES = *~ Makefile
 MAINTAINERCLEANFILES = *~ Makefile Makefile.in
